<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.AddNewPokemonActivity">

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/add_new_pokemon_activity_imageView_preview"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/placeholder_pokemon"
            app:layout_constraintBottom_toTopOf="@id/add_new_pokemon_activity_spinner_hunt_methods"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shiny_methode_textView_text"
            app:layout_constraintBottom_toTopOf="@+id/add_new_pokemon_activity_spinner_hunt_methods"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_new_pokemon_activity_imageView_preview" />

    <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/add_new_pokemon_activity_spinner_hunt_methods"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@id/autocomplete_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_new_pokemon_activity_imageView_preview" />

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/autocomplete_input_layout"
            app:layout_constraintBottom_toTopOf="@id/text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_new_pokemon_activity_spinner_hunt_methods"
            android:hint="@string/editText_pokemonName_hint">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/add_new_pokemon_activity_edittext_name"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="7dp"
                android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_input_layout"
            app:layout_constraintBottom_toTopOf="@+id/add_new_pokemon_activity_button_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/autocomplete_input_layout"
            android:hint="@string/editText_encounter_hint">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_new_pokemon_activity_edittext_eggsNeeded"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/add_new_pokemon_activity_checkbox_encounter_known"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/checkbox_encounters_known"
            app:layout_constraintBottom_toTopOf="@+id/text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autocomplete_input_layout" />

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_new_pokemon_activity_button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_ripple"
            android:text="@string/button_add_pokemon_text"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>